--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,35 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Curriculum Vitae</title>
 </head>
+
 <body>
     <header>
-
+        <h1>Curriculum Vitae</h1>
+        <nav>
+            <button><a href="#informacionPersonal">Información personal</a></button>
+            <button>Experiencia</button>
+            <button>Habilidades</button>
+        </nav>
     </header>
     <main>
-
+        <section id="informacionPersonal">
+            <article>
+                <div>
+                    <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil">
+                </div>
+                <div>
+                    <h2>Miranda Patricio</h2>
+                </div>
+                <div>
+                    <p>Programador • Desarrollador</p>
+                </div>
+            </article>
+        </section>
     </main>
-    <footer>}
+    <footer>
 
     </footer>
 </body>
 <script src="./js/script.js"></script>
+
 </html>
