--- a/index.html
+++ b/index.html
@@ -1,42 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Curriculum Vitae</title>
 </head>
 
 <body>
     <header>
-        <h1>Curriculum Vitae</h1>
-        <nav>
-            <button><a href="#informacionPersonal">Información personal</a></button>
-            <button>Experiencia</button>
-            <button>Habilidades</button>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">Curriculum Vitae</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#informacionPersonal">Información Personal</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
     </header>
+
+
     <main>
-        <section id="informacionPersonal">
-            <article>
-                <div>
-                    <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil">
+        <section class="container-fluid">
+            <h2 id="informacionPersonal">Información personal</h2>
+            <div class="row">
+                <div class="col-6">
+                    <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil" class="img-fluid">
                 </div>
-                <div>
-                    <h2>Miranda Patricio</h2>
-                </div>
-                <div>
+                <div class="col-6">
                     <p>Programador • Desarrollador</p>
                 </div>
-            </article>
+            </div>
+
+        </section>
+        <section class="container-fluid">
+            <h2 id="experiencia">Experiencia</h2>
+        </section>
+        <section class="container-fluid">
+            <h2 id="habilidades">Habilidades</h2>
         </section>
     </main>
     <footer>
 
     </footer>
 </body>
-<script src="./js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
 </html>
