--- a/index.html
+++ b/index.html
@@ -2,67 +2,118 @@
 <html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Curriculum Vitae</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="./img/emoji_people_FILL0_wght400_GRAD0_opsz48.svg">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Curriculum Vitae</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">Curriculum Vitae</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <h1>Curriculum vitae</h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="#informacionPersonal">Información Personal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experiencia">Experiencia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#habilidades">Habilidades</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+
+  <main>
+    <section class="container mt-3">
+      <div class="text-center">
+        <h2 id="informacionPersonal" class="bg-dark text-uppercase d-inline px-3">Información personal</h2>
+      </div>
+      <div class="row mt-2">
+        <div class="col-6">
+          <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil" class="img-fluid rounded-circle border border-dark">
+        </div>
+        <div class="col-6">
+          <div class="text-center">
+            <h3 class="px-3 bg-dark d-inline">Miranda Patricio</h3>
+          </div>
+          <p class="pt-3 text-center border-bottom ">Programador • Desarrollador</p>
+          <p class="text-center">Sobre mi</p>
+          <p> Estudiante de desarrollador web, con conocimientos en lenguajes Frontend y Backend. Actualmente
+            cursando el segundo año de la carrera. También egresado en técnico electrónico y con experiencia en
+            reparación y mantenimiento de software y hardware de PC. Cuento con cursos realizados y soy
+            autodidacta con todo lo relacionado a programación e informática, dispuesto a seguir aprendiendo y
+            formarme en lo que me gusta.
+          </p>
+          <p>
+            <a class="btn btn-dark" data-bs-toggle="collapse" href="#collapseExample" role="button"
+              aria-expanded="false" aria-controls="collapseExample">
+              Información personal
+            </a>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body bg-dark">
+              <p class="fst-italic"> Castelar, Buenos Aires</p>
+              <p class="fw-bold">• Fecha de nacimiento: <span class="fw-normal">18/02/1997</span></p>
+              <p class="fw-bold">• Telefono / celular: <span class="fw-normal">11-32675137</span></p>
+              <p class="fw-bold">• E-mail: <span class="fw-normal">patricio.97m@gmail.com</span></p>
+              <p class="fw-bold">• LinkedIn: <span class="fw-normal"> <a
+                    href="https://www.linkedin.com/in/patricio-mir97/"
+                    target="_blank">https://www.linkedin.com/in/patricio-mir97/</a></span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container mt-5">
+      <div class="text-center">
+        <h2 id="experiencia" class="bg-dark text-uppercase d-inline px-3">Experiencia</h2>
+      </div>
+      <div class="accordion mt-2" id="accordionExample">
+        <div class="accordion-item bg-dark">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed bg-primary bg-opacity-50 text-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Reparación de PC
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#informacionPersonal">Información Personal</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-              </ul>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
-          </nav>
-    </header>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
-    <main>
-        <section class="container-fluid">
-            <h2 id="informacionPersonal">Información personal</h2>
-            <div class="row">
-                <div class="col-6">
-                    <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil" class="img-fluid">
-                </div>
-                <div class="col-6">
-                    <p>Programador • Desarrollador</p>
-                </div>
-            </div>
+    <section class="container-fluid">
+      <h2 id="habilidades">Habilidades</h2>
+    </section>
+  </main>
+  <footer>
 
-        </section>
-        <section class="container-fluid">
-            <h2 id="experiencia">Experiencia</h2>
-        </section>
-        <section class="container-fluid">
-            <h2 id="habilidades">Habilidades</h2>
-        </section>
-    </main>
-    <footer>
-
-    </footer>
+  </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 </html>
