--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <h1>Curriculum vitae</h1>
@@ -33,6 +33,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#habilidades">Habilidades</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contacto">Contacto</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -41,15 +44,16 @@
 
 
   <main>
-    <section class="container bg-gradient border rounded-3 p-5" id="datos">
+    <section class="container p-5">
       <div class="text-center">
         <h2 id="informacionPersonal" class="bg-dark text-uppercase d-inline px-3">Información personal</h2>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil" class="img-fluid rounded border border-dark">
+          <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil"
+            class="img-fluid rounded border border-dark imgPerfil">
         </div>
-        <div class="col-6">
+        <div class="col-6 border rounded-3 p-2" id="datos">
           <div class="text-center">
             <h3 class="px-3 bg-dark d-inline">Miranda Patricio</h3>
           </div>
@@ -88,14 +92,14 @@
         <h2 id="experiencia" class="bg-dark text-uppercase d-inline px-3">Experiencia</h2>
       </div>
       <div class="accordion mt-2" id="accordionExample">
-        <div class="accordion-item bg-dark">
+        <div class="accordion-item bg-dark text-light">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button collapsed bg-primary bg-opacity-50 text-light" type="button"
-              data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
               ▷ Reparación de PC
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
             data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <strong>2016-2018</strong> <br> <br>
@@ -112,19 +116,22 @@
       <div class="accordion mt-2" id="accordionExample">
         <div class="accordion-item bg-dark">
           <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed bg-primary bg-opacity-50 text-light" type="button"
-              data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               ▷ Programador Java Jr.
             </button>
           </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+          <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo"
             data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse
-              plugin adds the appropriate classes that we use to style each element. These classes control the overall
-              appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
-              CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-              <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>2019-2020</strong> <br> <br>
+              Trabajo de programador para una empresa bancaria. Usé lenguajes orientados a objetos para organizar
+              cuentas bancarias y realizar transacciones. Además de diseñar una aplicación para que los clientes puedan
+              realizar homebanking de manera remota. <br><br>
+              Actividades y funciones que realicé: <br>
+              • Desarrollo de aplicaciones <br>
+              • Control de transacciones mediante Java y SQL<br>
+              • Análisis y consultas de clientes para mejorar el sistema online de la empresa
             </div>
           </div>
         </div>
@@ -132,20 +139,22 @@
       <div class="accordion mt-2" id="accordionExample">
         <div class="accordion-item bg-dark">
           <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed bg-primary bg-opacity-50 text-light" type="button"
-              data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-              aria-controls="collapseThree">
-              Reparación de PC
+            <button class="accordion-button collapsed bg-dark text-light" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              ▷ Desarrollador web Jr.
             </button>
           </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+          <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree"
             data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse
-              plugin adds the appropriate classes that we use to style each element. These classes control the overall
-              appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
-              CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-              <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>2020 - Actualidad</strong> <br> <br>
+              Programador web para una empresa del rubro gastronómico. Encargado de diseñar su página web y su catálogo
+              online. También diseñé su página movile, donde se pueden realizar pedidos directos al local. También
+              encargado de actualizar semanalmente las ofertas y precios de los productos<br><br>
+              Actividades y funciones que realicé: <br>
+              • Diseño de su página web desde cero <br>
+              • Soporte y mantenimiento de la página<br>
+              • Creación de la parte cliente-servidor
             </div>
           </div>
         </div>
@@ -153,17 +162,143 @@
     </section>
 
 
-    <section class="container-fluid">
-      <h2 id="habilidades">Habilidades</h2>
+    <section class="container mt-5">
+      <div class="text-center">
+        <h2 id="habilidades" class="bg-dark text-uppercase d-inline px-3">Habilidades</h2>
+      </div>
+      <div class="row mt-3">
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/java.png" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">Java</h5>
+              <p class="card-text text-dark">Realicé diversos cursos en UTN y UNLaM.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/mysql.png" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">MySQL</h5>
+              <p class="card-text text-dark">Realicé un curso en la plataforma en línea CoderHouse</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/html5.png" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">HTML5</h5>
+              <p class="card-text text-dark">Estudié este lenguaje en la carrera de desarrollo web de la UNLaM.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/css.jpg" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">CSS</h5>
+              <p class="card-text text-dark">Estudié este lenguaje en la carrera de desarrollo web de la UNLaM.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/javascript.png" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">Javascript</h5>
+              <p class="card-text text-dark">Estudié este lenguaje en la carrera de desarrollo web de la UNLaM.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/Python.png" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">Python</h5>
+              <p class="card-text text-dark">Estudié este lenguaje en la carrera de desarrollo web de la UNLaM.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/c++.png" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">c++</h5>
+              <p class="card-text text-dark">Estudié este lenguaje en la carrera de desarrollo web de la UNLaM.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="./img/c sahrp.png" class="card-img-top img-fluid" alt="java">
+            <div class="card-body">
+              <h5 class="card-title text-dark">C#</h5>
+              <p class="card-text text-dark">Estudié este lenguaje en la carrera de desarrollo web de la UNLaM.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-  </main>
-  <footer>
 
-  </footer>
+    <section class="container mt-5">
+      <div class="text-center">
+        <h2 id="contacto" class="bg-dark text-uppercase d-inline px-3">Contacto</h2>
+      </div>
+      <div class="row mt-2">
+        <div class="col-6">
+          <form>
+            <div class="mb-3">
+              <label for="name" class="form-label text-dark">Nombre</label>
+              <input type="text" class="form-control" id="name" aria-describedby="emailHelp"
+                placeholder="Ingrese su nombre">
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label text-dark">Email</label>
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                placeholder="Ingrese su email">
+            </div>
+            <div class="input-group">
+              <span class="input-group-text">Comentarios</span>
+              <textarea class="form-control" aria-label="With textarea" id="comentarios"
+                placeholder="Escriba un comentario"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary bg-dark text-light mt-2" id="newForm">Enviar</button>
+          </form>
+        </div>
+        <div class="col-6">
+          <div class="text-center">
+            <h2 id="contacto" class="bg-dark d-inline px-3">Redes sociales</h2>
+            <div class="text-start text-center mt-5">
+              <a class="btn btn-info" href="https://ar.linkedin.com/" role="button" target="_blank">
+                LinkedIn
+              </a>
+              <a class="btn btn-warning" href="https://ar.instagram.com/" role="button" target="_blank">
+                Instagram
+              </a>
+              <a class="btn btn-primary" href="https://facebook.com/" role="button" target="_blank">
+                Facebook
+              </a>
+              <a class="btn btn-success" href="https://web.whatsapp.com/" role="button" target="_blank">
+                WhatsApp
+              </a>
+            </div>
+          </div>
+        </div>
+    </section>
+    <footer>
+      <div class="text-center p-3 mt-3 bg-dark">
+        2022 Miranda Patricio |
+        <a class="text-light" href="https://github.com/patricio97m/CurriculumVitae" target="_blank">github</a>
+      </div>
+
+    </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="./js/script.js"></script>
 
 </html>
