--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="./img/foto-de-perfil.jpg" alt="foto-de-perfil"
+          <img src="./img/perfil.jfif" alt="foto-de-perfil"
             class="img-fluid rounded border border-dark imgPerfil">
         </div>
         <div class="col-6 border rounded-3 p-2" id="datos">
           <div class="text-center">
-            <h3 class="px-3 bg-dark d-inline">Miranda Patricio</h3>
+            <h3 class="px-3 bg-dark d-inline">Pedro Gray</h3>
           </div>
           <p class="pt-3 text-center border-bottom border-dark text-dark">Programador • Desarrollador</p>
           <p class="text-center text-dark">Sobre mi</p>
@@ -74,13 +74,13 @@
           </p>
           <div class="collapse" id="collapseExample">
             <div class="card card-body bg-dark">
-              <p class="fst-italic"> Castelar, Buenos Aires</p>
-              <p class="fw-bold">• Fecha de nacimiento: <span class="fw-normal">18/02/1997</span></p>
-              <p class="fw-bold">• Telefono / celular: <span class="fw-normal">11-32675137</span></p>
-              <p class="fw-bold">• E-mail: <span class="fw-normal">patricio.97m@gmail.com</span></p>
+              <p class="fst-italic"> Lanús, Buenos Aires</p>
+              <p class="fw-bold">• Fecha de nacimiento: <span class="fw-normal">20/07/1982</span></p>
+              <p class="fw-bold">• Telefono / celular: <span class="fw-normal">11-6666666</span></p>
+              <p class="fw-bold">• E-mail: <span class="fw-normal">pedro.gray@gmail.com</span></p>
               <p class="fw-bold">• LinkedIn: <span class="fw-normal"> <a
-                    href="https://www.linkedin.com/in/patricio-mir97/"
-                    target="_blank">https://www.linkedin.com/in/patricio-mir97/</a></span></p>
+                    href="https://www.linkedin.com/"
+                    target="_blank">https://www.linkedin.com/in/pedrogray/</a></span></p>
             </div>
           </div>
         </div>
@@ -181,7 +181,7 @@
             <img src="./img/mysql.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
               <h5 class="card-title text-dark">MySQL</h5>
-              <p class="card-text text-dark">Realicé un curso en la plataforma en línea CoderHouse</p>
+              <p class="card-text text-dark">Realicé un curso en la plataforma en línea FreeCodeCamp</p>
             </div>
           </div>
         </div>
@@ -291,7 +291,7 @@
     </section>
     <footer>
       <div class="text-center p-3 mt-3 bg-dark">
-        2022 Miranda Patricio |
+        2022 - Miranda Patricio |
         <a class="text-light" href="https://github.com/patricio97m/CurriculumVitae" target="_blank">github</a>
       </div>
 
