--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <h2 id="informacionPersonal" class="bg-dark text-uppercase d-inline px-3">Información personal</h2>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img src="./img/perfil.jfif" alt="foto-de-perfil"
             class="img-fluid rounded border border-dark imgPerfil">
         </div>
-        <div class="col-6 border rounded-3 p-2" id="datos">
+        <div class="col-sm-6 border rounded-3 p-2" id="datos">
           <div class="text-center">
             <h3 class="px-3 bg-dark d-inline">Pedro Gray</h3>
           </div>
@@ -167,7 +167,7 @@
         <h2 id="habilidades" class="bg-dark text-uppercase d-inline px-3">Habilidades</h2>
       </div>
       <div class="row mt-3">
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/java.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/mysql.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -185,7 +185,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/html5.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -194,7 +194,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/css.jpg" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -205,7 +205,7 @@
         </div>
       </div>
       <div class="row mt-3">
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/javascript.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -214,7 +214,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/Python.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -223,7 +223,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/c++.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -232,7 +232,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-6">
           <div class="card">
             <img src="./img/c sahrp.png" class="card-img-top img-fluid" alt="java">
             <div class="card-body">
@@ -249,7 +249,7 @@
         <h2 id="contacto" class="bg-dark text-uppercase d-inline px-3">Contacto</h2>
       </div>
       <div class="row mt-2">
-        <div class="col-6">
+        <div class="col-sm-6">
           <form>
             <div class="mb-3">
               <label for="name" class="form-label text-dark">Nombre</label>
@@ -269,7 +269,7 @@
             <button type="submit" class="btn btn-primary bg-dark text-light mt-2" id="newForm">Enviar</button>
           </form>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <div class="text-center">
             <h2 id="contacto" class="bg-dark d-inline px-3">Redes sociales</h2>
             <div class="text-start text-center mt-5">
@@ -290,7 +290,7 @@
         </div>
     </section>
     <footer>
-      <div class="text-center p-3 mt-3 bg-dark">
+      <div class="text-center p-3 mt-4 bg-dark">
         2022 - Miranda Patricio |
         <a class="text-light" href="https://github.com/patricio97m/CurriculumVitae" target="_blank">github</a>
       </div>
