cambio de foto de perfil

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </div>
       <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="./img/perfil.jfif" alt="foto-de-perfil"
-            class="img-fluid rounded border border-dark imgPerfil">
+          <img src="./img/perfil2.jfif" alt="foto-de-perfil"
+            class="img-fluid rounded border border-dark">
         </div>
         <div class="col-sm-6 border rounded-3 p-2" id="datos">
           <div class="text-center">
