--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
 
 
   <main>
-    <section class="container p-5">
+    <section class="container mt-3">
       <div class="text-center">
         <h2 id="informacionPersonal" class="bg-dark text-uppercase d-inline px-3">Información personal</h2>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-3">
         <div class="col-sm-6">
-          <img src="./img/perfil2.jfif" alt="foto-de-perfil"
-            class="img-fluid rounded border border-dark">
+          <img src="./img/perfil2.jfif" alt="foto-de-perfil" class="img-fluid rounded-4 border-secondary">
         </div>
         <div class="col-sm-6 border rounded-3 p-2" id="datos">
           <div class="text-center">
@@ -78,8 +77,7 @@
               <p class="fw-bold">• Fecha de nacimiento: <span class="fw-normal">20/07/1982</span></p>
               <p class="fw-bold">• Telefono / celular: <span class="fw-normal">11-6666666</span></p>
               <p class="fw-bold">• E-mail: <span class="fw-normal">pedro.gray@gmail.com</span></p>
-              <p class="fw-bold">• LinkedIn: <span class="fw-normal"> <a
-                    href="https://www.linkedin.com/"
+              <p class="fw-bold">• LinkedIn: <span class="fw-normal"> <a href="https://www.linkedin.com/"
                     target="_blank">https://www.linkedin.com/in/pedrogray/</a></span></p>
             </div>
           </div>
@@ -272,19 +270,21 @@
         <div class="col-sm-6">
           <div class="text-center">
             <h2 id="contacto" class="bg-dark d-inline px-3">Redes sociales</h2>
-            <div class="text-start text-center mt-5">
-              <a class="btn btn-info" href="https://ar.linkedin.com/" role="button" target="_blank">
-                LinkedIn
+            <div class="text-start text-center mt-3">
+              <a class="btn btn-info btn-lg" href="https://ar.linkedin.com/" role="button" target="_blank">
+                <img src="./img/work.svg" alt="work"> LinkedIn 
               </a>
-              <a class="btn btn-warning" href="https://ar.instagram.com/" role="button" target="_blank">
-                Instagram
+              <a class="btn btn-warning btn-lg" href="https://ar.instagram.com/" role="button" target="_blank">
+                <img src="./img/camara.svg" alt="camara"> Instagram
               </a>
-              <a class="btn btn-primary" href="https://facebook.com/" role="button" target="_blank">
-                Facebook
-              </a>
-              <a class="btn btn-success" href="https://web.whatsapp.com/" role="button" target="_blank">
-                WhatsApp
-              </a>
+              <div class="text-start text-center mt-1">
+                <a class="btn btn-primary btn-lg" href="https://facebook.com/" role="button" target="_blank">
+                  <img src="./img/group.svg" alt="group"> Facebook
+                </a>
+                <a class="btn btn-success btn-lg" href="https://web.whatsapp.com/" role="button" target="_blank">
+                  <img src="./img/phone.svg" alt="phone"> WhatsApp
+                </a>
+              </div>
             </div>
           </div>
         </div>
