--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <h1>Curriculum vitae <img src="./img/emoji_people_FILL0_wght400_GRAD0_opsz48.svg" alt="people"></h1>
