--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" aria-current="page" href="#informacionPersonal">Información Personal</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#experiencia">Experiencia</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#habilidades">Habilidades</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#contacto">Contacto</a>
             </li>
           </ul>
@@ -49,8 +49,8 @@
         <h2 id="informacionPersonal" class="bg-dark text-uppercase d-inline px-3">Información personal</h2>
       </div>
       <div class="row mt-3">
-        <div class="col-sm-6">
-          <img src="./img/perfil2.jfif" alt="foto-de-perfil" class="img-fluid rounded-4 border-secondary">
+        <div class="col-sm-6 text-center">
+          <img src="./img/perfil.jpg" alt="foto-de-perfil" class="img-fluid rounded-4 border-secondary">
         </div>
         <div class="col-sm-6 border rounded-3 p-2" id="datos">
           <div class="text-center">
@@ -270,18 +270,17 @@
         <div class="col-sm-6">
           <div class="text-center">
             <h2 id="contacto" class="bg-dark d-inline px-3">Redes sociales</h2>
-            <div class="text-start text-center mt-3">
-              <a class="btn btn-info btn-lg" href="https://ar.linkedin.com/" role="button" target="_blank">
-                <img src="./img/work.svg" alt="work"> LinkedIn 
-              </a>
-              <a class="btn btn-warning btn-lg" href="https://ar.instagram.com/" role="button" target="_blank">
+            <div class="text-center mt-3">
+              <a class="btn btn-info button-height" href="https://ar.linkedin.com/" role="button" target="_blank">
+                <img src="./img/work.svg" alt="work"> LinkedIn </a>
+              <a class="btn btn-warning button-height" href="https://ar.instagram.com/" role="button" target="_blank">
                 <img src="./img/camara.svg" alt="camara"> Instagram
               </a>
               <div class="text-start text-center mt-1">
-                <a class="btn btn-primary btn-lg" href="https://facebook.com/" role="button" target="_blank">
+                <a class="btn btn-primary button-height" href="https://facebook.com/" role="button" target="_blank">
                   <img src="./img/group.svg" alt="group"> Facebook
                 </a>
-                <a class="btn btn-success btn-lg" href="https://web.whatsapp.com/" role="button" target="_blank">
+                <a class="btn btn-success button-height" href="https://web.whatsapp.com/" role="button" target="_blank">
                   <img src="./img/phone.svg" alt="phone"> WhatsApp
                 </a>
               </div>
